src-ken&y/objects/Supplier_1099__c.object
<CustomObject>
    <customHelpPage>HelpSupplier1099</customHelpPage>
    <description>This handles the supplier 1099s for the current year and the previous historical 1099s.</description>
    <fields>
        <fullName>Batch_Job_ID__c</fullName>
        <description>Supplier 1099 Batch job Id</description>
        <label>Batch Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box10__c</fullName>
        <description>Box 10 - Crop Insurance</description>
        <inlineHelpText>Box 10 - Crop insurance proceeds</inlineHelpText>
        <label>10 Crop insurance proceeds</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box11__c</fullName>
        <description>Box 11 - Foreign Tax paid</description>
        <inlineHelpText>Box 11 - Foreign Tax paid</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box12__c</fullName>
        <description>Box 12 - Foreign country or U.S. possession</description>
        <inlineHelpText>Box 12 - Foreign country or U.S. possession</inlineHelpText>
        <label>DEPRECATED</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box15a__c</fullName>
        <description>Box 15a - Section 409A Deferrals</description>
        <inlineHelpText>Box 15a - Section 409A deferrals</inlineHelpText>
        <label>15a Section 409A deferrals</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box15b__c</fullName>
        <description>Box 15b Section 409A Income</description>
        <inlineHelpText>Section 409A Income</inlineHelpText>
        <label>15b Section 409A income</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BranchReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, branch reporting elected</description>
        <inlineHelpText>If checked, branch reporting elected</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Company the 1099 supplier / record belongs on.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Supplier 1099s</relationshipLabel>
        <relationshipName>Supplier_1099s</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to show a 1099 is amended and corrected</description>
        <label>Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>DEPRECATED</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Supplier 1099 Currency</relationshipLabel>
        <relationshipName>Supplier_1099_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows an AP user to exclude this 1099 from being filed for the year.</description>
        <inlineHelpText>Allows an AP user to exclude this 1099 from being filed for the year.</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box if this record needs to have a merge performed.</description>
        <inlineHelpText>Check this box if this record needs to have a merge performed.</inlineHelpText>
        <label>Generate PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PayerCountry__c</fullName>
        <description>Payer Country Code [2 digit code from IRS]</description>
        <inlineHelpText>Payer Country Code [2 digit code from IRS]</inlineHelpText>
        <label>Payer Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Address__c</fullName>
        <description>This shows up on the eFile flattened [compared to the other Address with multi-line]</description>
        <inlineHelpText>This shows up on the eFile flattened [compared to the other Address with multi-line]</inlineHelpText>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_City__c</fullName>
        <label>Payer City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_FIN__c</fullName>
        <description>Payer Federal ID Number</description>
        <inlineHelpText>Payer Federal ID Number</inlineHelpText>
        <label>Payer Federal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name__c</fullName>
        <description>Name of the payer to show on 1099.</description>
        <inlineHelpText>Name of the payer to show on 1099.</inlineHelpText>
        <label>Payer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Phone__c</fullName>
        <description>Enter the Payer Phone without dashes</description>
        <inlineHelpText>Enter the Payer Phone without dashes</inlineHelpText>
        <label>Payer Telephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_State__c</fullName>
        <label>Payer State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Street__c</fullName>
        <description>Payer Address Multi line - used for the PDF 1099 [vs. the eFile]</description>
        <inlineHelpText>Payer Address Multi line - used for the PDF 1099 [vs. the eFile]</inlineHelpText>
        <label>Payer Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payer_Zip__c</fullName>
        <label>Payer ZIP Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address__c</fullName>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_ID__c</fullName>
        <description>Recipient&apos;s Identification Number</description>
        <inlineHelpText>Recipient&apos;s Identification Number</inlineHelpText>
        <label>Recipient ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name_Control__c</fullName>
        <description>This is used for the eFile process.</description>
        <inlineHelpText>This is used for the eFile process.</inlineHelpText>
        <label>DEPRECATED</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_State__c</fullName>
        <label>Recipient State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Street__c</fullName>
        <description>A Multi-line layout of the Recipient address [used for the PDF]</description>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Zip__c</fullName>
        <label>Recipient ZIP Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <description>External Supplier ID.  Typically used with government filing requirements such as Account Number on the 1099.</description>
        <inlineHelpText>External Supplier ID.  Typically used with government filing requirements such as Account Number on the 1099.</inlineHelpText>
        <label>DEPRECATED</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier 1099s</relationshipLabel>
        <relationshipName>Supplier_1099</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIN_Type__c</fullName>
        <formula>CASE(LEN( Recipient_ID__c ), 10, &apos;1&apos;, 11, &apos;2&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to show a 1099 form is Void.</description>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1099_Key__c</fullName>
        <description>A unique key to identify the record as unique per filing year.</description>
        <inlineHelpText>A unique key to identify the record as unique per filing year.</inlineHelpText>
        <label>DEPRECATED</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X1099_Total__c</fullName>
        <formula>Box1__c +  
Box2__c + 
Box3__c + 
Box4__c + 
Box5__c + 
Box6__c + 
Box7__c + 
Box8__c + 
Box10__c + 
Box11__c + 
Box13__c + 
Box14__c + 
Box16__c + 
Box18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>&quot;2013&quot;</defaultValue>
        <description>Year of tax filing</description>
        <inlineHelpText>Year of tax filing</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Supplier 1099</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Recipient_Name__c</columns>
        <columns>Supplier__c</columns>
        <columns>Year__c</columns>
        <columns>Merge__c</columns>
        <columns>Corrected__c</columns>
        <columns>Exclude__c</columns>
        <columns>Filed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>1099-{0000000000}</displayFormat>
        <label>Supplier 1099</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier 1099s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>